--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,6 @@
 	<artifactId>point-of-sale-gateway</artifactId>
 	<packaging>jar</packaging>
 
-
-	<properties>
-		<java.version>1.8</java.version>
-		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<spring-cloud.version>Hoxton.SR1</spring-cloud.version>
-	</properties>
-
 	<dependencies>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -87,8 +77,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<!-- or newer version -->
 				<configuration>
-					<source>1.8</source> <!-- depending on your project -->
-					<target>1.8</target> <!-- depending on your project -->
+					<source>${maven.compiler.source}</source> <!-- depending on your project -->
+					<target>${maven.compiler.target}</target> <!-- depending on your project -->
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
